Fix the crash when changing the canvas type while Transform Tool active

BUG:328901